underscore and small caps

--- a/html-css-fundamentals/04_lists/index.html
+++ b/html-css-fundamentals/04_lists/index.html
@@ -11,5 +11,22 @@
         <li>citrinitas</li>
         <li>rubedo</li>
     </ol>
+    <ul>
+        <li>nigredo</li>
+        <li>albedo</li>
+        <li>citrinitas</li>
+        <li>rubedo</li>
+    </ul>
+    <ul>
+        <li>nigredo
+          <ul>
+            <li>primo</li>
+            <li>secundo</li>
+          </ul>
+        </li>
+        <li>albedo</li>
+        <li>citrinitas</li>
+        <li>rubedo</li>
+    </ul>      
 </body>
 </html>
