--- a/html-css-fundamentals/04_lists/index.html
+++ b/html-css-fundamentals/04_lists/index.html
@@ -11,12 +11,14 @@
         <li>citrinitas</li>
         <li>rubedo</li>
     </ol>
+    <hr>
     <ul>
         <li>nigredo</li>
         <li>albedo</li>
         <li>citrinitas</li>
         <li>rubedo</li>
     </ul>
+    <hr>
     <ul>
         <li>nigredo
           <ul>
@@ -27,6 +29,29 @@
         <li>albedo</li>
         <li>citrinitas</li>
         <li>rubedo</li>
-    </ul>      
+    </ul>    
+    <hr>
+    <ol>
+        <li>nigredo
+            <ol>
+            <li>primo</li>
+            <li>secundo</li>
+            </ol>
+        </li>
+        <li>albedo</li>
+        <li>citrinitas</li>
+        <li>rubedo</li>
+    </ol>  
+    <hr>
+    <dl>
+        <dt>nigredo</dt>
+        <dd>a blackening or melanosis</dd>
+        <dt>albedo</dt>
+        <dd>a whitening or leucosis</dd>
+        <dt>citrinitas</dt>
+        <dd>a yellowing or xanthosis</dd>
+        <dt>rubedo</dt>
+        <dd>a reddening, purpling, or iosis</dd>
+    </dl>
 </body>
 </html>
