--- a/html-css-fundamentals/05_tables/index.html
+++ b/html-css-fundamentals/05_tables/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Tables
-        
-    </title>
+    <title>Tables</title>
 </head>
+
 <body>
-    
+    <table border="1">
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>10</td>
+            <td>11</td>
+            <td>12</td>
+        </tr>
+    </table>
+    <hr>
+    <table border="1">
+        <tr>
+          <th>*</th>
+          <th>monday</th>
+          <th>tuesday</th>
+          <th>wednesday</th>
+          <th>thursday</th>
+          <th>friday</th>
+        </tr>
+        <tr>
+          <th>morning</th>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+        <tr>
+          <th>evening</th>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+          <td> </td>
+        </tr>
+      </table>
 </body>
+
 </html>
