--- a/html-css-fundamentals/05_tables/index.html
+++ b/html-css-fundamentals/05_tables/index.html
@@ -30,30 +30,82 @@
     <hr>
     <table border="1">
         <tr>
-          <th>*</th>
-          <th>monday</th>
-          <th>tuesday</th>
-          <th>wednesday</th>
-          <th>thursday</th>
-          <th>friday</th>
+            <th>*</th>
+            <th>monday</th>
+            <th>tuesday</th>
+            <th>wednesday</th>
+            <th>thursday</th>
+            <th>friday</th>
         </tr>
         <tr>
-          <th>morning</th>
-          <td> </td>
-          <td> </td>
-          <td> </td>
-          <td> </td>
-          <td> </td>
+            <th>morning</th>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
         </tr>
         <tr>
-          <th>evening</th>
-          <td> </td>
-          <td> </td>
-          <td> </td>
-          <td> </td>
-          <td> </td>
+            <th>evening</th>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
         </tr>
-      </table>
+    </table>
+    <hr>
+    <table border="1">
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td colspan="2">4</td>
+            <td>6</td>
+        </tr>
+    </table>
+    <hr>
+    <table border="1">
+        <tr>
+            <td rowspan="2">1</td>
+            <td>2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>6</td>
+        </tr>
+    </table>
+    <hr>
+    <table>
+        <thead>
+            <tr>
+                <td>header cell</td>
+            </tr>
+            <tr>
+                <td>header cell</td>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <td>footer cell</td>
+            </tr>
+            <tr>
+                <td>footer cell</td>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr>
+                <td>body cell</td>
+            </tr>
+            <tr>
+                <td>body cell</td>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
 </body>
 
 </html>
