--- a/html-css-fundamentals/06_links/index.html
+++ b/html-css-fundamentals/06_links/index.html
@@ -5,6 +5,6 @@
     <title>Link Basics</title>
 </head>
 <body>
-    <a href="http://www.google.com">Click to Visit Google</a>
+    <a href="http://www.google.com" target="_blank">Click to Visit Google</a>
 </body>
 </html>
