all links connected

--- a/html-css-fundamentals/06_links/htmlcompany/about-us/index.html
+++ b/html-css-fundamentals/06_links/htmlcompany/about-us/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>About Us</h1>
+    <a href="../services/index.html">Services</a><br>
+    <hr>
+    <a href="../index.html">Back to Main Page</a>
 </body>
 </html>
