--- a/html-css-fundamentals/06_links/htmlcompany/index.html
+++ b/html-css-fundamentals/06_links/htmlcompany/index.html
@@ -8,6 +8,10 @@
 
 <body>
     <h1>Main Page</h1>
+    <a href="about-us/index.html">About Us</a><br>
+    <hr>
+    <a href="services/index.html">Services</a><br>
+    <hr>
     <a href="about-us/our-team/jane-doe.html">Jane Doe</a><br>
     <hr>
     <a href="about-us/our-team/john-doe.html">John Doe</a><br>
