--- a/html-css-fundamentals/08_images/images_map/index.html
+++ b/html-css-fundamentals/08_images/images_map/index.html
@@ -6,39 +6,25 @@
     <title>Image Map</title>
 </head>
 
-<body>
-<a href="https://www.sdo.ba">
-    <img src="images/solar_system.jpg" alt="Solar System" usemap="">
-</a>
+<body style="background-color: black;">
+
+    <img src="images/solar_system.jpg" alt="Solar System" usemap="#solar-system-map">
+
     <map name="solar-system-map">
-        <area target="_blank" alt="Sun" title="Sun" href="planets/sun.html" coords="" shape="circle">
-        <area target="_blank" alt="Mercury" title="Mercury" href="planets/mercury.html" coords="" shape="circle">
-        <area target="_blank" alt="Venus" title="Venus" href="planets/venus.html" coords="" shape="circle">
-        <area target="_blank" alt="Earth" title="Earth" href="planets/earth.html" coords="" shape="circle">
-        <area target="_blank" alt="Mars" title="Mars" href="planets/mars.html" coords="" shape="circle">
-        <area target="_blank" alt="Jupiter" title="Jupiter" href="planets/jupiter.html" coords="" shape="circle">
-        <area target="_blank" alt="Saturn" title="Saturn" href="planets/saturn.html" coords="" shape="circle">
-        <area target="_blank" alt="Uranus" title="Uranus" href="planets/uranus.html" coords="" shape="circle">
-        <area target="_blank" alt="Neptune" title="Neptune" href="planets/neptune.html" coords="" shape="circle">
-        <area target="_blank" alt="Pluto" title="Pluto" href="planets/pluto.html" coords="" shape="circle">
+        <area target="_blank" alt="Sun" title="Sun" href="planets/sun.html" coords="300,196,54" shape="circle">
+        <area target="_blank" alt="Mercury" title="Mercury" href="planets/mercury.html" coords="350,244,14"
+            shape="circle">
+        <area target="_blank" alt="Venus" title="Venus" href="planets/venus.html" coords="218,150,22" shape="circle">
+        <area target="_blank" alt="Earth" title="Earth" href="planets/earth.html" coords="414,171,23" shape="circle">
+        <area target="_blank" alt="Mars" title="Mars" href="planets/mars.html" coords="316,85,20" shape="circle">
+        <area target="_blank" alt="Jupiter" title="Jupiter" href="planets/jupiter.html" coords="140,253,37"
+            shape="circle">
+        <area target="_blank" alt="Saturn" title="Saturn" href="planets/saturn.html" coords="443,89,29" shape="circle">
+        <area target="_blank" alt="Uranus" title="Uranus" href="planets/uranus.html" coords="489,308,18" shape="circle">
+        <area target="_blank" alt="Neptune" title="Neptune" href="planets/neptune.html" coords="72,70,19" shape="circle">
+        <area target="_blank" alt="Pluto" title="Pluto" href="planets/pluto.html" coords="44,356,15" shape="circle">
     </map>
 
-
-    <map name="planet-map">
-        <area target="_blank" alt="Sun" title="Sun" href="sun.html" coords="512,343,54" shape="circle">
-        <area target="_blank" alt="Merkury" title="Merkury" href="planet/merkury.html" coords="599,421,14"
-            shape="circle">
-        <area target="_blank" alt="Venus" title="Venus" href=" planet/venus.html" coords="373,261,22" shape="circle">
-        <area target="_blank" alt="Earth" title="Earth" href=" planet/earth.html" coords="712,296,23" shape="circle">
-        <area target="_blank" alt="Mars" title="Mars" href=" planet/mars.html" coords="537,153,20" shape="circle">
-        <area target="_blank" alt="Jupiter" title="Jupiter" href=" planet/jupiter.html" coords="240,435,37"
-            shape="circle">
-        <area target="_blank" alt="Saturn" title="Saturn" href=" planet/saturn.html" coords="756,162,29" shape="circle">
-        <area target="_blank" alt="Uranus" title="Uranus" href=" planet/uranus.html" coords="837,530,18" shape="circle">
-        <area target="_blank" alt="Neptune" title="Neptune" href=" planet/neptune.html" coords="124,121,19"
-            shape="circle">
-        <area target="_blank" alt="Pluto" title="Pluto" href=" planet/pluto.html" coords="77,611,15" shape="circle">
-    </map>
 </body>
 
 </html>
