--- a/html-css-fundamentals/08_images/images_favicon/index.html
+++ b/html-css-fundamentals/08_images/images_favicon/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Images</title>
     
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon-16x16.png" type="image/png" sizes="16x16">
     <link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
     <link rel="icon" href="favicon-64x64.png" type="image/png" sizes="64x64">
