--- a/html-css-fundamentals/08_images/images_excercise/index.html
+++ b/html-css-fundamentals/08_images/images_excercise/index.html
@@ -14,7 +14,9 @@
     </ul>
     <hr>
     <h1>Nikola Tesla </h1>
-    <p><strong>Nikola Tesla</strong> (<em>10 July 1856 – 7 January 1943</em>) was a Serbian-American inventor, electrical
+    <p>
+        <img src="images/tesla_portrait.jpg" alt="Nikola Tesla" align="right" width="230">
+        <strong>Nikola Tesla</strong> (<em>10 July 1856 – 7 January 1943</em>) was a Serbian-American inventor, electrical
         engineer, mechanical engineer, physicist, and futurist who is best known for his contributions to the design of
         the modern <u>alternating current</u><u> (AC)</u><u> electricity supply system.</u>
     </p>
