--- a/html-css-fundamentals/08_images/images_excercise/pages/memorials.html
+++ b/html-css-fundamentals/08_images/images_excercise/pages/memorials.html
@@ -24,9 +24,9 @@
             Croatia's capital, commemorating his proposal to build an alternating current power station,
             which he made to the city council. The plaque quotes Tesla's statement, given in the building
             on 24 May 1892, which reads: <em>"As a son of this country, I consider it my duty to help the
-            City of Zagreb in every way, either through counsel or through action" (Croatian:
-            "Smatram svojom dužnošću da kao rođeni sin svoje zemlje pomognem gradu Zagrebu u svakom
-            pogledu savjetom i činom").</em>
+                City of Zagreb in every way, either through counsel or through action" (Croatian:
+                "Smatram svojom dužnošću da kao rođeni sin svoje zemlje pomognem gradu Zagrebu u svakom
+                pogledu savjetom i činom").</em>
         </li>
         <li>On 7 July 2006, on the corner of Masarykova and Preradovićeva streets in the Lower Town area
             in Zagreb, a monument of Tesla was unveiled. This monument was designed by Ivan Meštrović
@@ -44,6 +44,9 @@
             Church, Niagara Falls, and designed by Les Drysdale of Hamilton, Ontario. Drysdale's design
             was the winning design from an international competition.
         </li>
+        <p align="center">
+            <img src="../images/tesla_statue.jpg" alt="Nikola Tesla - Monument in Baku" width="425px">
+        </p>
         <li>A monument of Tesla was unveiled in Baku in 2013. Presidents Ilham Aliyev and Tomislav Nikolić
             attended a ceremony of unveiling.</li>
         <li>In 2012 Jane Alcorn, president of the nonprofit group Tesla Science Center at Wardenclyffe,
