--- a/html-css-fundamentals/08_images/images_excercise/pages/personal_life.html
+++ b/html-css-fundamentals/08_images/images_excercise/pages/personal_life.html
@@ -14,7 +14,7 @@
     </ul>
     <hr>
     <h2>Personal Life</h2>
-    <p>Tesla worked every day from 9:00 a.m. until 6:00 p.m. or later, with dinner from exactly 8:10 p.m.,
+    <p>Tesla worked every day from <u>9:00 a.m. until 6:00 p.m.</u> or later, with dinner from exactly 8:10 p.m.,
         at Delmonico's restaurant and later the Waldorf-Astoria Hotel. Tesla would telephone his dinner
         order to the headwaiter, who also could be the only one to serve him. "The meal was required to be ready
         at eight o'clock ... He dined alone, except on the rare occasions when he would give a dinner to a group
@@ -27,6 +27,7 @@
         mind get at all this?" In the same interview, Tesla said that he believed that all
         fundamental laws could be reduced to one.</p>
     <h2>Eidetic memory</h2>
+    <img src="../images/tesla_camera.jpeg" alt="Nikola Tesla - Camera">
     <p>Tesla read many works, memorizing complete books, and supposedly possessed a photographic memory.He
         was a polyglot, speaking eight languages: Serbo-Croatian, Czech, English, French, German, Hungarian,
         Italian, and Latin. Tesla related in his autobiography that he experienced detailed moments of inspiration.
@@ -40,7 +41,7 @@
         frequent flashbacks to events that had happened previously in his life.</p>
     <h2>Sleep habits</h2>
     <p>Tesla claimed never to sleep more than two hours per night.However, he did admit to "dozing" from time
-        to time "to recharge his batteries." During his second year of study at Graz, Tesla developed
+        to time <em>"to recharge his batteries."</em> During his second year of study at Graz, Tesla developed
         a passionate proficiency for billiards, chess, and card-playing, sometimes spending more than 48 hours
         in a stretch at a gaming table. On one occasion at his laboratory, Tesla worked for a period of 84 hours
         without rest.Kenneth Swezey, a journalist whom Tesla had befriended, confirmed that Tesla rarely slept.
