assignment mini html site

--- a/html-css-fundamentals/assignment-mini-html-site/pages/literary-work.html
+++ b/html-css-fundamentals/assignment-mini-html-site/pages/literary-work.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Literary work</title>
 </head>
+
 <body>
-    
+    <ul>
+        <li><a href="../index.html" alt="Main Page">Main Page</a></li>
+        <li><a href="early-life-and-education.html" alt="Early life and educations">Early life and education</a></li>
+        <li><a href="literary-work.html" alt="Literary work">Literary work</a></li>
+        <li><a href="pupin-coils.html" alt="Pupin coils">Pupin coils</a></li>
+    </ul>
+    <hr>
+    <h1>Literary work</h1>
+    <p>Besides his patents he published several dozen scientific disputes, articles, reviews and a 396-page
+        autobiography under the name Michael Pupin, From Immigrant to Inventor (Scribner's, 1923). He won the annual
+        Pulitzer Prize for Biography or Autobiography. It was published in Serbian in 1929 under the title From pastures
+        to scientist (Od pašnjaka do naučenjaka). </p>
+        
+    <p><strong>Beside this he also published:</strong></p>
+    <ul>
+        <li>Pupin Michael: <em>Der Osmotische Druch und seine Beziehung zur Freien Energie</em>, Inaugural Dissertation zur Erlangung der Doctorwurde, Buchdruckerei von Gustav Shade, Berlin, June, 1889.</li>
+        <li>Pupin Michael: <em> Thermodynamics of Reversible Cycles in Gases and Saturated Vapors</em>, John Wiley & Sons. 1894.</li>
+        <li>Pupin Michael: <em>Serbian Orthodox Church</em>, J. Murray. London, 1918.</li>
+        <li>Pupin Michael: <em>Yugoslavia. (In Association for International Conciliation Amer. Branch —Yugoslavia).</em> American Association for International Conciliation. 1919.</li>
+        <li>Pupin Michael: <em>The New Reformation; from Physical to Spiritual Realities</em>, Scribner, New York, 1927.</li>
+        <li>Pupin Michael: <em>Romance of the Machine</em>, Scribner, New York, 1930.</li>
+        <li>Pupin Michael: <em>Discussion by M. Pupin and other prominent engineers in “Toward Civilization"</em>, edited by C. A. Beard. Longmans, Green& Co. New York, 1930.</li>
+    </ul>
 </body>
+
 </html>
