--- a/html-css-fundamentals/10_css_basics/index.html
+++ b/html-css-fundamentals/10_css_basics/index.html
@@ -4,11 +4,25 @@
     <head>
         <meta charset="UTF-8">
         <title>CSS Basics</title>
+        <!-- eksterna stilizacija ima zadnji prioritet-->
         <link rel="stylesheet" href="style.css" type="text/css">
+        <!-- interna stilizacija ima drugi prioritet -->
+    <!-- <style>
+            h1{
+                color: yellow;
+            }
+        </style> -->
     </head>
 
     <body>
-        <h1>This is heading</h1>
+        <!-- prioritet stilizacije interne eksterni ili linijske stilizacije -->
+        <!-- linijska stilizacija ima najveci prioritet -->
+        <h1>
+
+        <!-- style="color: blue;" -->
+
+        This is heading
+        </h1>
     </body>
 
 </html>
