--- a/html-css-fundamentals/11_basic_css_selectors/index.html
+++ b/html-css-fundamentals/11_basic_css_selectors/index.html
@@ -9,40 +9,50 @@
         /* "div *" - univerzalni primjer slozenog selektora */
         /* tipski selektori na osnovu naziva elemenata */
         /* class selektor za vrijednoscu class atributa moze se definisati na bilo kom elementu */
-        .content {
+/*         .content {
             border: 1px solid aqua;
-        }
+        } */
 
         /* id selektor */
-        #first-div {
+/*         #first-div {
             color: blue;
         }
 
         #second-div {
             color: red;
-        }
+        } */
 
         /* selektor na osnovu relacija elemenata; zovu se kombinatori; ima ih 4; 
         1. descendant - selektovanje svih potomaka */
 
-        #first-div p {
+/*         #first-div p {
             color: brown;
-        }
+        } */
 
         /* 2. child selektor - direktni potomci */
-        #first-div>p {
+/*         #first-div>p {
             color: antiquewhite;
-        }
+        } */
 
         /* 3. prvi naredni srodni element tipa paragraph*/
-        #first-div+p {
+/*         #first-div+p {
             color: blueviolet;
         }
-
+ */
         /* 4. general sibling selektor */
-        #first-div~p {
-            color:blue; 
+/*         #first-div~p {
+            color: blue;
+        } */
+
+        /* slozeni tipski + klasni selektor */
+/*         p.content {
+            color: yellow;
+        } */
+
+        div.content {
+            color: yellow;
         }
+
     </style>
 
 </head>
