--- a/html-css-fundamentals/12_css_box_model/index.html
+++ b/html-css-fundamentals/12_css_box_model/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
     <title>CSS Box Model</title>
-
-    <style>
-        p {
-            width: 50%;
-        }
-    </style>
-
-</head>
-<body>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit nemo nam nesciunt debitis molestiae quod. Blanditiis molestiae illum natus dolores error aut, itaque obcaecati! Officiis corporis quisquam provident perferendis dicta, veritatis culpa at quia, tempora quae deserunt est, alias consectetur? Error eos quod praesentium. At inventore quidem harum modi quod?
-    </p>
-</body>
+  </head>
+  <body>
+    <!-- auto margine -->
+    <p style='width: 50%; margin: auto;'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus aliquam erat et nunc maximus, non fermentum mi semper. Cras rhoncus dolor vel pretium convallis. Aenean quis orci pretium, ultrices ex vitae, congue nulla. Aliquam et auctor nunc, non luctus felis. Proin varius justo sit amet augue suscipit tempus. Morbi bibendum porta eleifend. Curabitur egestas aliquam nunc, eu laoreet sem lacinia luctus. </p>
+  </body>
 </html>
