--- a/html-css-fundamentals/12_css_box_model/index.html
+++ b/html-css-fundamentals/12_css_box_model/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>CSS Box Model</title>
-  </head>
-  <body>
-    <!-- auto margine -->
-    <p style='width: 50%; margin: auto;'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus aliquam erat et nunc maximus, non fermentum mi semper. Cras rhoncus dolor vel pretium convallis. Aenean quis orci pretium, ultrices ex vitae, congue nulla. Aliquam et auctor nunc, non luctus felis. Proin varius justo sit amet augue suscipit tempus. Morbi bibendum porta eleifend. Curabitur egestas aliquam nunc, eu laoreet sem lacinia luctus. </p>
-  </body>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus aliquam erat et nunc maximus, non fermentum mi
+        semper. Cras rhoncus dolor vel pretium convallis. Aenean quis orci pretium, ultrices ex vitae, congue nulla.
+        Aliquam et auctor nunc, non luctus felis. Proin varius justo sit amet augue suscipit tempus. Morbi bibendum
+        porta eleifend. Curabitur egestas aliquam nunc, eu laoreet sem lacinia luctus. </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vulputate imperdiet diam eget blandit. Ut
+        fermentum porttitor dui, eget blandit orci dictum volutpat. Etiam ut risus eu est rutrum rhoncus ornare vel
+        eros. Praesent interdum dictum suscipit. Fusce laoreet imperdiet porta. Quisque commodo odio neque, id
+        sollicitudin erat fringilla in.
+    </p>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vulputate imperdiet diam eget blandit. Ut
+        fermentum porttitor dui, eget blandit orci dictum volutpat. Etiam ut risus eu est rutrum rhoncus ornare vel
+        eros. Praesent interdum dictum suscipit. Fusce laoreet imperdiet porta. Quisque commodo odio neque, id
+        sollicitudin erat fringilla in.
+    </p>
+
+</body>
+
 </html>
