--- a/js-fundamentals/index.html
+++ b/js-fundamentals/index.html
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First JS Example</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>First JS Example</title>
+        <style>
+            html,
+            body {
+                margin: 0;
+                height: 100%;
+            }
 
-<body>
+            #main-container {
+                background-color: #F29484;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100%;
+            }
 
-    <div id="main-container">
-        <button id="button" type="button">Click me!</button>
-    </div>
-    
-</body>
+            button {
+                background: transparent;
+                border: 2px solid white;
+                padding: 16px;
+                border-radius: 4px;
+                cursor: pointer;
+                color: white;
+                font-family: sans-serif;
+                font-weight: bold;
+            }
+
+            button:focus {
+                outline: none;
+            }
+        </style>
+    </head>
+
+    <body>
+
+        <div id="main-container">
+            <button id="button" type="button">Click me!</button>
+        </div>
+
+        <script type="text/javascript">
+
+            const COLOR_1 = "#026873";
+            const COLOR_2 = "#F29484";
+
+            let containerElement = document.getElementById("main-container");
+
+            document.getElementById("button").addEventListener("click", toggleBgColor);
+
+            let counter = 0;
+
+            function toggleBgColor() {
+
+                counter++;
+
+                if (counter % 2 == 1) {
+                    containerElement.style.backgroundColor = COLOR_1;
+                }
+                else {
+                    containerElement.style.backgroundColor = COLOR_2;
+                }
+            }
+        </script>
+
+    </body>
 
 </html>
