--- a/html-css-fundamentals/13_layout_basics/index.html
+++ b/html-css-fundamentals/13_layout_basics/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Layout Basics</title>
+
+    <style>
+
+    h2, b {
+        border: 1px solid blue; 
+    }
+
+    </style>
+
 </head>
 <body>
-    
+    <h2>HTML & CSS Fundamentals</h2>
+    <b style="height: 100px; display: inline-block;">HTML & CSS Fundamentals</b>
+    <h2>HTML & CSS Fundamentals</h2>
+    <b>HTML & CSS Fundamentals</b>
 </body>
 </html>
