span green text + free icon from web

--- a/html-css-fundamentals/14_first_layout/basic/index copy.html
+++ b/html-css-fundamentals/14_first_layout/basic/index copy.html
@@ -36,7 +36,9 @@
 </head>
 
 <body>
-  <header><img src="logo.png" alt="our company logo"></header>
+  <header>
+    <img src="https://www.freeiconspng.com/uploads/3d-cube-logo-15.png" style="width:100px;height:100px;" alt="3D Cube Logo">
+  </header>
 
   <nav>
     <a href="#">Home</a>
@@ -45,6 +47,7 @@
   </nav>
 
   <section>
+    <p>This wall is painted in <span style="color:green">green</span> color.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi facere itaque maxime odio impedit reprehenderit illo nam cupiditate beatae incidunt laboriosam quia, explicabo veniam optio pariatur voluptatibus nostrum ut facilis porro sunt tempore! Quibusdam eius et nam labore nulla repellat ea totam vero blanditiis ducimus laudantium esse obcaecati optio, alias numquam recusandae dolores. Nemo culpa placeat delectus ex inventore corrupti ipsa dignissimos, quae optio impedit atque, consequuntur tenetur velit nam voluptatum eos minus molestiae. Iure facere consequuntur maiores voluptatem unde possimus eius, tenetur, libero nam laudantium id necessitatibus incidunt sapiente quibusdam, suscipit aliquid sequi officiis in nobis vitae iste. Aperiam.</p>    
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi facere itaque maxime odio impedit reprehenderit illo nam cupiditate beatae incidunt laboriosam quia, explicabo veniam optio pariatur voluptatibus nostrum ut facilis porro sunt tempore! Quibusdam eius et nam labore nulla repellat ea totam vero blanditiis ducimus laudantium esse obcaecati optio, alias numquam recusandae dolores. Nemo culpa placeat delectus ex inventore corrupti ipsa dignissimos, quae optio impedit atque, consequuntur tenetur velit nam voluptatum eos minus molestiae. Iure facere consequuntur maiores voluptatem unde possimus eius, tenetur, libero nam laudantium id necessitatibus incidunt sapiente quibusdam, suscipit aliquid sequi officiis in nobis vitae iste. Aperiam.</p>    
   </section>
