html normal flow zadaci

--- a/html-css-fundamentals/15_html_normal_flow/positioning/index.html
+++ b/html-css-fundamentals/15_html_normal_flow/positioning/index.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML normal flow-positioning</title>
-</head>
-<body>
-    
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <title>HTML normal flow</title>
+
+        <style>
+            div {
+                width: 250px;
+                height: 180px;
+            }
+
+            #box1 {
+                position: absolute;
+                left: 270px;
+                background-color: rgb(248, 112, 112);
+            }
+
+            #box2 {
+                background-color: rgb(219, 248, 112);
+                margin: 8px 0 8px 0;
+            }
+
+            #box3 {
+
+                background-color: rgb(95, 248, 171);
+            }
+        </style>
+    </head>
+
+    <body>
+        <div id="box1">
+        </div>
+
+        <div id="box2">
+        </div>
+
+        <div id="box3">
+        </div>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent arcu mauris, dictum id pharetra ac, interdum eget
+        turpis. Duis vestibulum purus nunc, id dictum ipsum hendrerit id. Proin vestibulum elit nec mi convallis imperdiet. In
+        auctor nulla vel lorem pellentesque luctus. Phasellus sed facilisis nulla, eu consectetur nisi. Mauris diam urna, semper
+        vitae augue nec, gravida consequat nunc. Donec sed nibh fringilla, ullamcorper nulla quis, aliquam nisl. Nulla hendrerit
+        libero ut sem feugiat posuere. In vitae fermentum sapien. Pellentesque habitant morbi tristique senectus et netus et
+        malesuada fames ac turpis egestas. Quisque ante diam, tempor finibus auctor ac, elementum id lectus.</p>
+
+        <p>Fusce quis fermentum nunc. Integer efficitur arcu eu dui commodo, vitae viverra nisi tincidunt. Duis at congue odio.
+        Suspendisse blandit, lorem vel facilisis maximus, lectus quam consequat sapien, id placerat sapien ipsum at felis. Morbi
+        finibus, turpis eu placerat ornare, mi neque pretium ante, ut pretium felis leo vel nisi. Vivamus maximus vestibulum
+        mauris, vitae porta metus consequat ac. Suspendisse efficitur volutpat ante, quis porttitor sapien eleifend ut.
+        Suspendisse at nisl risus. Ut pulvinar ante et pharetra volutpat. In vehicula lorem at turpis hendrerit eleifend sit
+        amet at ipsum. Aliquam semper nisl at urna gravida vestibulum. Nulla tristique varius eleifend. Fusce rhoncus metus
+        justo, ut iaculis nisi euismod ut.</p>
+
+        <p>Vivamus sollicitudin magna id orci varius, quis gravida nisl feugiat. Curabitur nec nisi ut nibh condimentum ultrices
+        sed vitae lorem. Suspendisse potenti. Curabitur interdum ante sit amet nunc consequat pulvinar. Sed quis sapien lectus.
+        Etiam vestibulum nisl et lacinia bibendum. Phasellus placerat elementum est, a scelerisque mi dignissim a.</p>
+
+
+        <p>Nulla dignissim purus non velit ultricies, et laoreet lorem dignissim. Nulla vitae elit egestas, dignissim arcu nec,
+        viverra urna. Sed aliquam orci nulla, sit amet feugiat sapien egestas vel. Nulla auctor enim eget tellus consequat
+        finibus. Aenean vitae tellus fermentum, egestas neque quis, euismod nisi. Nam malesuada diam tortor, non faucibus massa
+        tempus in. In rutrum tellus varius suscipit laoreet. Vestibulum facilisis orci quis tortor volutpat, eu maximus nunc
+        pharetra. Suspendisse nisl turpis, ultrices quis laoreet id, lacinia vitae justo. Fusce aliquet neque a pellentesque
+        congue. Nullam iaculis condimentum odio nec dignissim. Sed fermentum dignissim ipsum, at rutrum justo ornare ac. Quisque
+        pretium vestibulum libero et varius.</p>
+
+        <p>Donec tincidunt rutrum euismod. Vestibulum porta tortor tellus, a suscipit diam vulputate non. Etiam nulla quam,
+        faucibus at ultrices eu, tincidunt vel sem. Integer ac nisi vitae justo tempus lacinia at sed neque. Etiam efficitur
+        mattis sapien ac facilisis. Fusce tempor tincidunt augue non ullamcorper. Suspendisse tempus aliquet purus ac mollis.
+        Phasellus pharetra, metus quis condimentum tincidunt, enim sapien blandit ipsum, eu blandit felis augue vitae tortor.
+        Maecenas faucibus, quam in gravida tincidunt, tellus ipsum semper purus, quis commodo enim dolor sed felis. In accumsan
+        vulputate fermentum. Vivamus molestie elit et tellus tincidunt, in porta tortor cursus. Donec feugiat, neque facilisis
+        vulputate placerat, nisi lorem facilisis risus, a mollis elit nisl eu velit. Sed et mollis nulla. Vestibulum finibus
+        accumsan dapibus. Vestibulum id mattis nunc.</p>
+
+            
+    </body>
+
 </html>
