--- a/html-css-fundamentals/16_css_colors/index-copy.html
+++ b/html-css-fundamentals/16_css_colors/index-copy.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>CSS Colors</title>
     <style>
-
         h1 {
-            color:blue;
+            color: rgb(255, 0, 0);
         }
-
+        div {
+            width: 450px;
+            height: 300px;
+            background-color:rgb(255, 0, 0);
+            border-style: solid;
+            border-width: 10px;
+            border-color: cyan green blue black;
+        }
     </style>
 </head>
+
 <body>
     <h1>This is heading</h1>
+    <div></div>
 </body>
+
 </html>
