--- a/html-css-fundamentals/17_css_text/font_basics/index-copy.html
+++ b/html-css-fundamentals/17_css_text/font_basics/index-copy.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>CSS Text</title>
+
+    <style>
+        body {
+            font-family: Georgia, 'Times New Roman', Times, serif
+        }
+
+        .serif {
+            font-family: serif;
+        }
+
+        .sans-serif {
+            font-family: sans-serif;
+        }
+
+        .monospace {
+            font-family: monospace;
+        }
+
+        p {
+            font-size: 22px;
+/*             font-style: oblique;
+            color: green;
+            text-indent: 50px;
+            letter-spacing: 8px;
+            word-spacing: 16px;
+            line-height: 33px;
+            text-transform: uppercase;
+            text-decoration: overline;
+            text-shadow: 2px 2px black; */
+        }
+    </style>
+
 </head>
+
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio qui optio minus dolor voluptatibus necessitatibus exercitationem aliquam, molestiae corrupti consequatur molestias unde veritatis quo sequi saepe aliquid deserunt quae odio quisquam neque earum. Saepe voluptatibus adipisci repudiandae incidunt nam accusamus, aliquam eius, voluptatum, consectetur dolor veniam ea sunt illum rem.</p>
+    <p>
+        <span class="serif">Serif</span><br>
+        <span class="sans-serif">Sans Serif</span><br>
+        <span class="monospace">Monospace</span>
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio qui optio minus dolor voluptatibus
+        necessitatibus exercitationem aliquam, molestiae corrupti consequatur molestias unde veritatis quo sequi saepe
+        aliquid deserunt quae odio quisquam neque earum. Saepe voluptatibus adipisci repudiandae incidunt nam accusamus,
+        aliquam eius, voluptatum, consectetur dolor veniam ea sunt illum rem.</p>
 </body>
+
 </html>
