assignment-mini html site update

--- a/html-css-fundamentals/assignment-mini-html-site-update/index.html
+++ b/html-css-fundamentals/assignment-mini-html-site-update/index.html
@@ -4,29 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Mihajlo Idvorski Pupin</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <ul>
-        <li><a href="index.html" alt="Main Page">Main Page</a></li>
-        <li><a href="pages/early-life-and-education.html" alt="Early life and educations">Early life and education</a>
-        </li>
-        <li><a href="pages/literary-work.html" alt="Literary work">Literary work</a></li>
-        <li><a href="pages/pupin-coils.html" alt="Pupin coils">Pupin coils</a></li>
-    </ul>
-    <hr>
-    <h1>Mihajlo Idvorski Pupin</h1>
-    <p>
+    <nav>
+        <a href="index.html" alt="Main Page">Main Page</a><br>
+        <a href="pages/early-life-and-education.html" alt="Early life and educations">Early life and
+            education</a><br>
+        <a href="pages/literary-work.html" alt="Literary work">Literary work</a><br>
+        <a href="pages/pupin-coils.html" alt="Pupin coils">Pupin coils</a><br>
+    </nav>
+    
+    <aside>
+        <h1>Mihajlo Idvorski Pupin</h1>
         <img src="images/pupin.jpg" alt="">
-    </p>
-    <p><strong>Mihajlo Idvorski Pupin, Ph.D., LL.D. (Serbian Cyrillic: Михајло Идворски Пупин; 9 October 1858 – 12 March 1935)</strong>,
-        also known as Michael I. Pupin, was a Serbian American physicist and physical chemist.
-    </p>
-    <p>Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance
-        telephone communication by placing loading coils (of wire) at predetermined intervals along the transmitting
-        wire (known as "pupinization").</p>
-    <p>Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which later
-        became NASA.</p>
+        <p><strong>Mihajlo Idvorski Pupin, Ph.D., LL.D. (Serbian Cyrillic: Михајло
+                Идворски Пупин; 9 October 1858 – 12
+                March 1935)</strong>,
+            also known as Michael I. Pupin, was a Serbian American physicist and physical chemist.
+        </p>
+        <p>Pupin is best known for his numerous patents, including a means of greatly extending the range of
+            long-distance
+            telephone communication by placing loading coils (of wire) at predetermined intervals along the transmitting
+            wire (known as "pupinization").</p>
+        <p>Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which
+            later
+            became NASA.</p>
+    </aside>
 </body>
 
 </html>
