--- a/html-css-fundamentals/assignment-mini-html-site-update/pages/literary-work.html
+++ b/html-css-fundamentals/assignment-mini-html-site-update/pages/literary-work.html
@@ -4,32 +4,91 @@
 <head>
     <meta charset="UTF-8">
     <title>Literary work</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <ul>
-        <li><a href="../index.html" alt="Main Page">Main Page</a></li>
-        <li><a href="early-life-and-education.html" alt="Early life and educations">Early life and education</a></li>
-        <li><a href="literary-work.html" alt="Literary work">Literary work</a></li>
-        <li><a href="pupin-coils.html" alt="Pupin coils">Pupin coils</a></li>
-    </ul>
-    <hr>
-    <h1>Literary work</h1>
-    <p>Besides his patents he published several dozen scientific disputes, articles, reviews and a 396-page
-        autobiography under the name Michael Pupin, From Immigrant to Inventor (Scribner's, 1923). He won the annual
-        Pulitzer Prize for Biography or Autobiography. It was published in Serbian in 1929 under the title From pastures
-        to scientist (Od pašnjaka do naučenjaka). </p>
-        
-    <p><strong>Beside this he also published:</strong></p>
-    <ul>
-        <li>Pupin Michael: <em>Der Osmotische Druch und seine Beziehung zur Freien Energie</em>, Inaugural Dissertation zur Erlangung der Doctorwurde, Buchdruckerei von Gustav Shade, Berlin, June, 1889.</li>
-        <li>Pupin Michael: <em>Thermodynamics of Reversible Cycles in Gases and Saturated Vapors</em>, John Wiley & Sons. 1894.</li>
-        <li>Pupin Michael: <em>Serbian Orthodox Church</em>, J. Murray. London, 1918.</li>
-        <li>Pupin Michael: <em>Yugoslavia. (In Association for International Conciliation Amer. Branch —Yugoslavia).</em> American Association for International Conciliation. 1919.</li>
-        <li>Pupin Michael: <em>The New Reformation; from Physical to Spiritual Realities</em>, Scribner, New York, 1927.</li>
-        <li>Pupin Michael: <em>Romance of the Machine</em>, Scribner, New York, 1930.</li>
-        <li>Pupin Michael: <em>Discussion by M. Pupin and other prominent engineers in “Toward Civilization"</em>, edited by C. A. Beard. Longmans, Green& Co. New York, 1930.</li>
-    </ul>
+    <nav>
+        <a href="../index.html" alt="Main Page">Main Page</a><br>
+        <a href="early-life-and-education.html" alt="Early life and educations">Early life and
+            education</a><br>
+        <a href="literary-work.html" alt="Literary work">Literary work</a><br>
+        <a href="pupin-coils.html" alt="Pupin coils">Pupin coils</a><br>
+    </nav>
+
+    <aside>
+        <h1>Literary work</h1>
+        <p>Besides his patents he published several dozen scientific disputes, articles, reviews and a 396-page
+            autobiography under the name Michael Pupin, From Immigrant to Inventor (Scribner's, 1923). He won the annual
+            Pulitzer Prize for Biography or Autobiography. It was published in Serbian in 1929 under the title From
+            pastures
+            to scientist (Od pašnjaka do naučenjaka).
+        </p>
+
+        <table>
+            <thead>
+                <tr class="heading">
+                    <th colspan="4">Besides this he also published:</th>
+                </tr>
+                <tr>
+                    <th>Title</th>
+                    <th>Publisher</th>
+                    <th>Location</th>
+                    <th>Year</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="title">Der Osmotische Druch und seine Beziehung zur Freien Energie</td>
+                    <td>Inaugural Dissertation zur Erlangung der Doctorwurde, Buchdruckerei von Gustav Shade</td>
+                    <td>Berlin</td>
+                    <td>June, 1889.</td>
+                </tr>
+                <tr class="even">
+                    <td class="title">Thermodynamics of Reversible Cycles in Gases and Saturated Vapors</td>
+                    <td>John Wiley & Sons.</td>
+                    <td></td>
+                    <td>1894.</td>
+                </tr>
+                <tr>
+                    <td class="title">Serbian Orthodox Church</td>
+                    <td>J. Murray</td>
+                    <td>London</td>
+                    <td>1918.</td>
+                </tr>
+                <tr class="even">
+                    <td class="title">Yugoslavia. (In Association for International Conciliation Amer.
+                        Branch—Yugoslavia).
+                    </td>
+                    <td>American Association for International Conciliation</td>
+                    <td></td>
+                    <td>1919.</td>
+                </tr>
+                <tr>
+                    <td class="title">The New Reformation; from Physical to Spiritual Realities</td>
+                    <td>Scribner</td>
+                    <td>New York</td>
+                    <td>1927.</td>
+                </tr>
+                <tr class="even">
+                    <td class="title">Romance of the Machine</td>
+                    <td>Scribner</td>
+                    <td>New York</td>
+                    <td>1930.</td>
+                </tr>
+                <tr>
+                    <td class="title">Discussion by M. Pupin and other prominent engineers in “Toward Civilization"</td>
+                    <td>edited by C. A. Beard. Longmans, Green& Co.</td>
+                    <td>New York</td>
+                    <td>1930.</td>
+                </tr>
+            </tbody>
+            <tfoot></tfoot>
+        </table>
+    </aside>
 </body>
 
 </html>
