--- a/html-css-fundamentals/assignment-mini-html-site-update/pages/literary-work.html
+++ b/html-css-fundamentals/assignment-mini-html-site-update/pages/literary-work.html
@@ -30,10 +30,10 @@
 
         <table>
             <thead>
-                <tr class="heading">
+                <tr id="heading">
                     <th colspan="4">Besides this he also published:</th>
                 </tr>
-                <tr>
+                <tr id="heading2">
                     <th>Title</th>
                     <th>Publisher</th>
                     <th>Location</th>
