var let const & hoisting

--- a/js-fundamentals/04_variables_and_constants/index.html
+++ b/js-fundamentals/04_variables_and_constants/index.html
@@ -9,14 +9,33 @@
 <body>
     <script>
 
-        let counter = 0;
+/*         var counter = 0;
+        console.log(counter);
+
         counter = 1;
+        console.log(counter);
+
         counter = 5;
-
-        document.write(counter);
-
+        console.log(counter); */
 
 
+        //ispis vrijednosti na tri nacina
+/*         document.write("Hello World!");
+        console.log(counter);
+        alert(counter); */
+
+        /* const COLOR_1 = "#026873"; */
+
+        //var promjejiva
+        let x = "*block variable*";
+
+        function myFunction() {
+            var y = "*function variable*";
+            
+        }
+        console.log(x);
+        console.log(y);//NECE ISPISIVATI
+        
     </script>
 </body>
 </html>
